--- a/src/OrderAPI/appsettings.json
+++ b/src/OrderAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "ConnectionString": "${MONGO_CONNECTION_STRING}",
+    "DatabaseName": "${MONGO_DATABASE_NAME}"
+  }
 }
